add_subdirectory(Communicators)
add_subdirectory(Diagnostics)
#add_subdirectory(EigenSolver)
add_subdirectory(Equations)
add_subdirectory(Generator)
add_subdirectory(Io)
add_subdirectory(LoadSplitter)
add_subdirectory(Model)
add_subdirectory(PhysicalKernels)
add_subdirectory(PhysicalOperators)
add_subdirectory(Pseudospectral)
add_subdirectory(Resolutions)
add_subdirectory(ScalarFields)
add_subdirectory(Simulation)
add_subdirectory(SparseSolvers)
add_subdirectory(SpatialScheme)
add_subdirectory(SpectralKernels)
add_subdirectory(Statistics)
add_subdirectory(StorageProviders)
add_subdirectory(Timestep)
add_subdirectory(Transform)
add_subdirectory(TransformConfigurators)
add_subdirectory(TransformCoordinators)
add_subdirectory(TransformGroupers)
add_subdirectory(TypeSelectors)
add_subdirectory(Variables)
add_subdirectory(Version)
